<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="ExtraTranslation">
    <string name="app_name">AirVengeance</string>
    <string name="temperature_reading">Temperature: %1$s\u00B0 %2$s</string>
    <string name="humidity_reading">Humidity: %1$s%%</string>
    <string name="pressure_reading">Pressure: %1$s inHg</string>
    <string name="pm25_reading">PM2.5: %1$s</string>
    <string name="pm10_reading">PM10: %1$s</string>
    <string name="settings">Settings</string>

    <string name="manager_button">Manage</string>
    <string name="sensor_tyler">Tyler\'s Sensor</string>
    <string name="new_sensor">Add New Sensor</string>
    <string name="list_sensors">All Sensors</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="temperature_units_label">Temperature Unit</string>
    <string name="is_metric_key" translatable="false">is_metric_key</string>
    <string name="preferences">mobile_preferences</string>
    <string name="celsius">Celsius</string>
    <string name="fahrenheit">Fahrenheit</string>
    <string name="temperature">Temperature</string>
    <string name="humidity">Humidity</string>
    <string name="pressure">Pressure</string>
    <string name="pm10">PM 10</string>
    <string name="pm25">PM 25</string>


    <string name="minimum_temp">Minimum Temperature</string>
    <string name="maximum_temp">Maximum Temperature</string>
    <string name="minimum_humid">Minimum Humidity</string>
    <string name="maximum_humid">Maximum Humidity</string>
    <string name="minimum_press">Minimum Pressure</string>
    <string name="maximum_press">Maximum Pressure</string>
    <string name="zip_code">Zip Code</string>
    <string name="title_activity_prefs">Preferences</string>
    <string name="time_interval_sec">Time Between Readings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="indoor">Indoor</string>
    <string name="outside">Outside</string>
    <string name="history">History</string>
    <string name="trend">Trend</string>
    <string name="graph">Graph</string>
    <string name="outdoor_readings">Outdoor Readings</string>
    <string name="inddor_readings">Indoor Readings</string>
    <string name="outdoor_readings_fragment_title">Outdoor Readings</string>
    <string name="history_fragment_title">History</string>
    <string name="day">Day</string>
    <string name="week">Week</string>
    <string name="month">Month</string>


    <string-array name="graph_choices">
        <item>Temperature</item>
        <item>Humidity</item>
        <item>Pressure</item>
        <item>PM 2.5</item>
        <item>PM 10</item>
    </string-array>
    <string name="title_activity_sensor_manager">SensorManager</string>
    <string name="action_settings">Settings</string>


</resources>
