<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="Units">

        <SwitchPreference
            android:key="@string/is_metric_key"
            android:title="@string/temperature_units_label"
            android:summaryOn="@string/celsius"
            android:summaryOff="@string/fahrenheit"
            android:defaultValue="true"/>
    </PreferenceCategory>
    <PreferenceCategory
        android:title="Zip Code for Weather Reading">
        <EditTextPreference
            android:key="Zip Code"
            android:title="Zip Code"
            android:defaultValue="14224"
            android:summary="Tap here to enter Zip Code"/>

    </PreferenceCategory>

    <PreferenceCategory
        android:title="Preferences">
        <EditTextPreference
            android:key="@string/minimum_temp"
            android:summary="Tap to Change Minimum Temperature"
            android:title="Minimum Temperature"
            android:defaultValue="10"
            android:inputType="number" />

        <EditTextPreference
            android:key="@string/maximum_temp"
            android:summary="Tap to Change Maximum Temperature"
            android:title="Maximum Temperature"
            android:defaultValue="15"
            android:inputType="number"/>


        <EditTextPreference
            android:key="@string/minimum_humid"
            android:summary="Tap to Change Minimum Humidity"
            android:title="Minimum Humidity"
            android:defaultValue="20"
            android:inputType="number"/>

        <EditTextPreference
            android:key="@string/maximum_humid"
            android:summary="Tap to Change Minimum Temperature"
            android:title="Maximum Humidity"
            android:defaultValue="40"
            android:inputType="number"/>

        <EditTextPreference
            android:key="@string/minimum_press"
            android:summary="Tap to Change Minimum Pressure"
            android:title="Minimum Pressure"
            android:defaultValue="15"
            android:inputType="number"/>

        <EditTextPreference
            android:key="@string/maximum_press"
            android:summary="Tap to Change Maximum Pressure"
            android:title="Maximum Pressure"
            android:defaultValue="25"
            android:inputType="number"/>

        <EditTextPreference
            android:key="@string/time_interval_sec"
            android:summary="Tap to Change Time Between Sensor Readings"
            android:title="Time Between Readings (Seconds)"
            android:defaultValue="10"
            android:inputType="number"/>


    </PreferenceCategory>



</PreferenceScreen>